Fix incorrect inline code whitespace

--- a/template/styles/text.css
+++ b/template/styles/text.css
@@ -210,7 +210,7 @@ code {
     padding-right: 3px;
     background: #eee8d5;
     border-radius: 5px;
-    display: inline-block;
+    display: inline;
 }
 pre.chl {
     background: #002b36;
